test/oscar/compiler/errors/invalidCondition.oscar
def main() => unit = {
  int x = 1;
  if (x = 1) {
	println("Error");
  }
}